youtubewatched/static/main.css
/*General styles*/
* {
    box-sizing: border-box;
}

body {
    margin: 1% auto 1% auto;
    width: 60%;
}

body > * {
    font-family: "Open Sans", verdana, arial, sans-serif ;
}

input, select, textarea, button {
    font-family: inherit;
    font-size: inherit;
}

form {
    outline: 1px solid lightgray;
}

form > span {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 80%;
    padding: 2px 0;
}

h1, h2, h3, h4{
    color: darkslategray;
}

h3, h4 {
    margin: 8px 0;
}

p {
    margin: 6px 0;
}

hr {
    border: none;
    height: 1px;
    background-color: gray;
}

:focus::-webkit-input-placeholder,
:focus::-moz-placeholder ,
:focus::-ms-input-placeholder {
    opacity: 0.3;
}

/*Utility classes */
.hidden {
    display: none;
}

/*Specific styles*/

.project-dir-path, form, #new-project-submit-button, #progress-bar-rectangle, #takeout-help {
    margin: 10px 0;
}
.project-path {
    font-weight: bold;
}

#new-project-buttons {
    display: flex;
}

#new-project-buttons > button {
    margin-bottom: 10px;
    width: 50%;
}

#index-top-buttons {
    display: flex;
    justify-content: space-between;
}

#setup-project-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-items: center;
    justify-content: flex-start;
    height: 170px;
    padding: 20px 0;
}

#takeout-form, #switch-project-form, #update-form {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 70px;
}

#update-form * {
    margin: 0 4px;
}

#update-form input[type='submit'] {
    margin-left: 80px;
}

#update-cutoff-input {
    width: 50px;
}

#new-project-submit-button {
    width: 70%;
}

#new-project-help-container {
    margin: 5% auto 1.5% auto;
}

.link-btn, .link-btn:visited {
    color: dodgerblue;
    text-decoration: none;
}

#db-progress {
    height: 120px;
    margin: 20px 0;
}

#progress-bar-container {
    visibility: hidden;
    flex-direction: row;
    align-items: center;
}

#progress-bar-rectangle {
    width: 100%;
    height: 30px;
    border: 1px solid lightgray;
    text-align: center;
}

#progress-bar-text {
    position: relative;
    top: -83%;
}

#progress-bar {
    background-color: dodgerblue;
    width: 0;
    height: 28px;
    transition: all 0.1s ease;
}

#wait-for-db {
    color: red;
}

input, .button, .button-cancel, #update-cutoff-periods {
    height: 30px;
    border: 1px solid lightgray;
}

input:not([type=submit]) {
    width: 50%;
}

.button {
    border: 1px solid dodgerblue;
    background-color: white;
}

.button:disabled, .button-cancel:disabled {
    border: 1px solid gray;
    background-color: lightgray;
}

.button:hover:enabled {
    background-color: dodgerblue;
    color: white;
    transition: 0.05s;
}

.button-cancel {
    background-color: white;
    border: 1px solid tomato;
}

.button-cancel:hover:enabled {
    background-color: tomato;
    color: white;
    transition: 0.05s;
}

#visualize-button {
    width: 200px;
    border: 1px solid limegreen;
    background-color: white;
    color: limegreen;
    transition: 0.05s;
}

#visualize-button:hover:enabled {
    background-color: limegreen;
    color: white;
    transition: 0.05s;
}
#visualize-button:disabled {
    background-color: lightgray;
    color: darkslategrey;
}

